<resources>
    <string name="app_name">Kids Drawing App</string>
    <string name="small_brush">The small brush</string>
    <string name="medium_brush">The medium brush</string>
    <string name="large_brush">The large brush</string>
    <string name="brush_size">Brush size</string>
    <string name="black_color">Black Color</string>
    <string name="white_color">White Color</string>
    <string name="blue_color">Blue Color</string>
    <string name="yellow_color">Yellow Color</string>
    <string name="green_color">Green Color</string>
    <string name="purple_color">Purple Color</string>
    <string name="red_color">Red Color</string>
    <string name="pink_color">Pink Color</string>
    <string name="image_description">Set Image Background</string>
    <string name="ib_gallery">Browse a picture to your background.</string>
    <string name="ib_des_clear">Clear drawing view.</string>
    <string name="eraser">Eraser</string>
    <string name="undo">undo</string>
    <string name="save">Save</string>
    <string name="please_wait">Please Wait...</string>
</resources>